--- a/client/public/index.html
+++ b/client/public/index.html
@@ -28,7 +28,7 @@
         margin: 0;
       }
     </style>
-    <title>Hybrid</title>
+    <title>Hybrid Homes and properties</title>
   </head>
   <body>
     <!-- preloader area end -->
